# tree-sitter-dbdiagram

./: .editorconfig  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  example-file.dbdiagram  example-file.dbml  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tree-sitter-http.pc.in
bindings/c/tree_sitter/: tree-sitter-tree-sitter-http.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tree_sitter_http/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTreeSitterHttpTests/: TreeSitterTreeSitterHttpTests.swift
luarocks-3.11.1/: config.unix
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
